@@ -10,6 +10,7 @@
     $defaultExpand='';
     $number = '%i%';
     $expand='1';
+    $postTitleLength='0';
     $inExclude='include';
     $inExcludeCats='';
     $showPosts='yes';
@@ -25,6 +26,7 @@
     $title = attribute_escape($options[$number]['title']);
     $showPostCount = $options[$number]['showPostCount'];
     $expand = $options[$number]['expand'];
+    $postTitleLength = $options[$number]['postTitleLength'];
     $inExcludeCats = $options[$number]['inExcludeCats'];
     $inExclude = $options[$number]['inExclude'];
     $catSort = $options[$number]['catSort'];
